--- a/register/regist.css
+++ b/register/regist.css
@@ -21,7 +21,7 @@ button {
     padding: 5px;
     font-size: 15px;
     font-weight: 100;
-    background-color: #9ac8cd
+    background-color: #9ac8cd;
     color: white;
     box-shadow: 0 0 8px 1px;
     cursor: pointer;
