--- a/Home/home.css
+++ b/Home/home.css
@@ -48,6 +48,11 @@ body {
 .nonhover {
   border: 5PX;
   background-color: teal;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .menu-bar ul li {
   /* width: 120px; */
@@ -113,4 +118,46 @@ body {
 .hero {
   height: calc(100vh - 80px);
   background-image: url(./bg.jpg);
-  background-position:center;}
+  background-position: center;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+header {
+  background-color: #212b38;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+.hero {
+  background-color: white;
+  padding: 20px;
+  text-align: justify;
+  font-size: 20px;
+}
+img {
+display: flex;
+align-items: center;
+margin-right: 2px;
+}
+.about {
+  padding: 20px;
+  text-align: center;
+}
+footer {
+  background-color: #212b38;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+.icon {
+  margin:0 5px;
+}
